2005-10-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/context-property.cc (execute_general_pushpop_property):
	robustness checks.

	* input/regression/override-nest.ly: new file.

	* python/convertrules.py (FatalConversionError.subber): conversion
	rule for #'callbacks

	* input/regression/override-nest.ly: new function.

	* lily/parser.yy (music_property_def): allow \override #'a #'b =
	#c too. 

	* lily/context-property.cc (lookup_nested_property): new function.
	(evict_from_alist): new function.
	(general_pushpop_property): new function.
	(execute_general_pushpop_property): rewrite. Support nested
	properties too.

2005-10-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/beam.cc: use length-fraction too.

	* scm/define-grob-properties.scm (all-user-grob-properties):
	remove property flag-width-function
	(all-user-grob-properties): remove space-function.

	* scm/layout-beam.scm: remove flag-width-function.

	* lily/beam.cc: remove flag-width-function

	* scm/layout-beam.scm: remove beam dir functions.

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): use length-fraction.

	* lily/stem.cc (calc_length): multiply with length_fraction. Makes
	for easier grace tweaks.

	* lily/beam.cc: remove dir-function.

	* lily/system.cc (pre_processing): use callback to trigger spacing procedures.

	* lily/grob.cc: remove spacing-procedure.

	* lily/note-head.cc (calc_stem_attachment): new function.
	(internal_print): use callback to get glyph-name.

	* lily/grob-property.cc (get_interfaces): new function.

	* lily/grob-scheme.cc (LY_DEFINE): new function ly:grob-interfaces

	* lily/stem.cc (calc_stem_end_position): new function.
	(calc_length): new function.
	document details for stem.
	remove Stem::get_direction()

	* lily/grob-scheme.cc (LY_DEFINE): new function ly:grob-set-callback! 

	* lily/grob-property.cc (set_callback): new function.

	* lily/script-engraver.cc (make_script_from_event): don't trigger callback.

	* lily/item-scheme.cc: new file.
