@@ -1525,7 +1525,7 @@ tsMarkup =\markup {
 }
 
 {
-  \override Staff.TimeSignature #'print-function = #Text_interface::print
+  \override Staff.TimeSignature #'callbacks #'stencil = #Text_interface::print
   \override Staff.TimeSignature #'text = #tsMarkup
   \time 3/2
   c'2 \bar ":" c'4 c'4.
