@@ -1,5 +1,8 @@
 2005-10-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* Documentation/user/changing-defaults.itely (Difficult tweaks):
+	use callbacks.
+
 	* lily/context-property.cc (execute_general_pushpop_property):
 	robustness checks.
 
